<?xml version="1.0"?>
<package format="2">
  <name>com3528Team9</name>
  <version>0.0.1</version>
  <description>The COM3528 Team9 package</description>

  <maintainer email="mirvine1@sheffield.ac.uk">Matthew Irvine</maintainer>
  <url>https://github.com/Mirvine1/COM3528Team9</url>
  <license>CC BY-NC</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>